docs: add swagger api tags
